--- a/flaskcli_pkg/templates/dev/requirements.txt
+++ b/flaskcli_pkg/templates/dev/requirements.txt
@@ -1,13 +1,13 @@
-Flask==0.12.2
+Flask==1.0.0
 Flask-Bootstrap==3.3.7.1
 flasgger==0.6.6
 Flask-Cors==3.0.3
 Fabric3==1.13.1.post1
 gunicorn==19.7.1
-Jinja2==2.9.6
+Jinja2==2.10.1
 mysqlclient==1.3.10
 pep8==1.7.0
-requests==2.17.3
+requests==2.20.0
 requests-oauthlib==0.8.0
-SQLAlchemy==1.1.13
-Werkzeug==0.12.2
+SQLAlchemy==1.3.0
+werkzeug==0.15.3
